# i3ipcpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  events.cpp  workspaces.cpp
include/i3ipc++/: ipc.hpp
src/: ipc.cpp
